infrastructure/components/authentication/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-${cluster_name}-${base_domain}
  namespace: controller-authentication
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.${cluster_name}.${base_domain}
    external-dns.alpha.kubernetes.io/target: ${cluster_name}.${base_domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${cluster_name}.${base_domain}`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: wildcard.${cluster_name}.${base_domain}.tls
